syntax = "proto3";

package userpb;

option go_package = "./proto";

service UserService {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse);
}

message RegisterUserRequest{
    string name = 1;
    string email = 2;
    string password = 3;
    string phone = 4;
}

message RegisterUserResponse{
    uint32 id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
}

message LoginUserRequest{
    string email = 1;
    string password = 2;
}

message LoginUserResponse{
    string token = 1;
}